# curlish

./: .curlish-sync.toml  .gitignore  Cargo.toml  README.md  copilot-instructions.md
src/: app.rs  config.rs  headers.rs  http.rs  lib.rs  main.rs  model.rs  storage.rs  sync.rs  ui.rs
tests/: sync_test.rs
