[package]
name = "curlish"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"

crossterm = "0.27"
git-sync-rs = "0.7.0"
ratatui = "0.26"

reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
